--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
 			<div class="tabs">
 				<button id="tab-voice" class="tab active">Voice</button>
 				<button id="tab-chat" class="tab">Chat</button>
+				<button id="new-btn" class="tab" style="margin-left:auto;" title="Start new conversation">New</button>
 			</div>
 
 			<!-- Voice Pane (default) - no text, only mic and GIF -->
